--- a/adventofcode_utils/Cargo.toml
+++ b/adventofcode_utils/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "puzzle1"
+name = "adventofcode_utils"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[dependencies.adventofcode_utils]
-path = "../adventofcode_utils"
